# NB_project

./: .gitignore  ARCHITECTURE.md  MEMORY_CONTEXT_GUIDE.md  PLAN.md  README.md  RESOURCES_AND_ROADMAP.md  RULES.md  docker-compose.yml  start.bat  stop.bat
backend/: .env.example  Dockerfile  _err.txt  _start.bat  _test_llm.py  _test_task.py  _test_thread.py  output_paper.md  output_paper.tex  pyproject.toml  test_full_pipeline.py  test_verification.py  test_writing_only.py  test_writing_with_charts.py
backend/app/: config.py  main.py
backend/app/api/: apikeys.py  chat_routes.py  files.py  knowledge_routes.py  router.py  tasks.py  ws.py
backend/app/api/schemas/: request.py  response.py
backend/app/auth/: __init__.py  dependencies.py  github.py  schemas.py
backend/app/core/: nodes.py  router.py  state.py  workflow.py
backend/app/core/llm/: factory.py
backend/app/knowledge/: __init__.py  chain.py  embedder.py  indexer.py  loader.py  query_expander.py  reranker.py  retriever.py  schemas.py
backend/app/sandbox/: executor.py
backend/app/services/: redis_pubsub.py  session.py
backend/app/tools/: __init__.py  interaction_tools.py  kb_tools.py  math_tools.py  web_search_tools.py
backend/data/: sessions.json
backend/data/chroma_db/: chroma.sqlite3
backend/knowledge_base/_import_queue/: README.md
backend/knowledge_base/templates/: evaluation_framework.yaml  optimization_framework.yaml  prediction_framework.yaml
backend/scripts/: __init__.py  embed_chart.py  generate_template.py  import_knowledge.py  test_verification.py  test_writing_with_charts.py
(+209 files in other folders)
